--- a/index.html
+++ b/index.html
@@ -1,74 +1,61 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Flight Preference Planner</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Flight Preference Planner</title>
+    <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
-  <div class="app">
-    <h1>Flight Preference Planner</h1>
-    <div class="form">
-      <label>Destination:
-        <select id="destination">
-          <option value="">Select destination</option>
-          <option value="Munich">Munich</option>
-          <option value="Vienna">Vienna</option>
-          <option value="Copenhagen">Copenhagen</option>
-          <option value="Zurich">Zurich</option>
-          <option value="Madrid">Madrid</option>
-          <option value="Barcelona">Barcelona</option>
-          <option value="London">London</option>
-          <option value="Dusseldorf">Dusseldorf</option>
-          <option value="Frankfurt">Frankfurt</option>
-          <option value="Asia">Asia</option>
-          <option value="Layover Long Europe">Layover Long Europe</option>
-        </select>
-      </label>
-      <label>Number of Flights:
-        <input type="number" id="flights" min="1" />
-      </label>
-      <label>Layover Time:
-        <select id="layover">
-          <option value="">Select layover</option>
-          <option value="24">24</option>
-          <option value="48">48</option>
-          <option value="70">70</option>
-          <option value="48-70">48 to 70</option>
-        </select>
-      </label>
-
-<label>
-      <label>Layover Time:
-        <select id="layover">
-          <option value="">Select layover</option>
-          <option value="24">24</option>
-          <option value="48">48</option>
-          <option value="70">70</option>
-          <option value="48-70">48 to 70</option>
-        </select>
-      </label>
-        <input type="number" id="flights" min="1" />
-      </label>
-      <label>Your Priority:
-        <select id="priority">
-          <option value="0">No Priority</option>
-          <option value="0.1">Low</option>
-          <option value="0.2">Medium</option>
-          <option value="0.3">High</option>
-          <option value="0.5">Very High</option>
-        </select>
-      </label>
-      <label><input type="checkbox" id="weekend" /> Weekend</label>
-      <button onclick="addFlight()">Add Flight</button>
-      <button onclick="clearAll()">Clear All</button>
+    <div class="container">
+        <h1>Flight Preference Planner</h1>
+        <form id="flight-form">
+            <label>Destination:
+                <select id="destination">
+                    <option value="">Select destination</option>
+                    <option value="Munich">Munich</option>
+                    <option value="Vienna">Vienna</option>
+                    <option value="Copenhagen">Copenhagen</option>
+                    <option value="Zurich">Zurich</option>
+                    <option value="Madrid">Madrid</option>
+                    <option value="Barcelona">Barcelona</option>
+                    <option value="London">London</option>
+                    <option value="Düsseldorf">Düsseldorf</option>
+                    <option value="Frankfurt">Frankfurt</option>
+                    <option value="Asia">Asia</option>
+                    <option value="Long Layover anywhere in Europe">Long Layover anywhere in Europe</option>
+                </select>
+            </label><br/>
+            <label>Number of Flights:
+                <input type="number" id="flights" min="1"/>
+            </label><br/>
+            <label>Layover Time:
+                <select id="layover">
+                    <option value="">Select layover</option>
+                    <option value="24">24</option>
+                    <option value="48">48</option>
+                    <option value="70">70</option>
+                    <option value="48-70">48 to 70</option>
+                </select>
+            </label><br/>
+            <label>Your Priority:
+                <select id="priority">
+                    <option value="No Priority">No Priority</option>
+                    <option value="Low">Low Priority (+25)</option>
+                    <option value="Medium">Medium Priority (+50)</option>
+                    <option value="High">High Priority (+75)</option>
+                    <option value="Very High">Very High Priority (+100)</option>
+                </select>
+            </label><br/>
+            <label><input type="checkbox" id="weekend"/> Weekend</label><br/>
+            <button type="button" onclick="addFlight()">Add Flight</button>
+            <button type="button" onclick="clearAll()">Clear All</button>
+        </form>
+        <div id="flight-list"></div>
+        <button onclick="calculate()">Plan your roaster now</button>
+        <div id="results"></div>
     </div>
-    <div id="flightList"></div>
-    <button onclick="calculateResults()">Plan your roaster now</button>
-    <h2>Optimized Preference Plan</h2>
-    <ol id="resultList"></ol>
-  </div>
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
